Added move counter & made squares look more like cards.

--- a/src/Game.css
+++ b/src/Game.css
@@ -18,18 +18,24 @@ ol, ul {
 }
 
 .card {
-  background: #fff;
-  border: 1px solid #999;
+  border: 5px double #999;
   float: left;
-  font-size: 24px;
+  font-size: 30px;
   font-weight: bold;
-  line-height: 34px;
-  height: 34px;
-  margin-right: -1px;
-  margin-top: -1px;
+  line-height: 100px;
+  height: 120px;
+  margin-right: 5px;
+  margin-top: 5px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 90px;
+}
+
+.card-front {
+  background: #fff;
+}
+.card-back{
+  background: #ddd;
 }
 
 .card:focus {
@@ -41,18 +47,12 @@ ol, ul {
 }
 
 .game {
-  display: flex;
+  /*display: flex;*/
   flex-direction: row;
+  display: block;
 }
 
 .game-info {
-  margin-left: 20px;
-}
-
-.bold {
-		font-weight: bold;
-}
-
-.highlight {
-		background-color: salmon;
+  margin-left: 0px;
+  margin-bottom: 10px;
 }
