--- a/src/Game.css
+++ b/src/Game.css
@@ -90,3 +90,53 @@ button, button:active, button:focus {
 .reset-btn:hover {
 		  background: #4f010b;
 }
+
+/* ----Card flip voodoo below---- */
+
+/* entire container, keeps perspective */
+.flip-container {
+		  perspective: 1000px;
+		  float: left;
+		  height: 120px;
+		  margin-right: 10px;
+		  margin-top: 10px;
+		  width: 90px;
+}
+/* flip the pane when hovered */
+.flip-container.visible .flipper {
+		  transform: rotateY(180deg);
+}
+
+.flip-container, .front, .back {
+		  width: 90px;
+		  height: 120px;
+}
+
+/* flip speed goes here */
+.flipper {
+		  transition: 0.6s;
+		  transform-style: preserve-3d;
+
+		  position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+		  backface-visibility: hidden;
+
+		  position: absolute;
+		  top: 0;
+		  left: 0;
+}
+
+/* front pane, placed above back */
+.back {
+		  z-index: 2;
+		  /* for firefox 31 */
+		  transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.front {
+		  transform: rotateY(180deg);
+}
